# uav-vpp-guidance

./: .gitattributes  .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  expert_vpp_system_design.md  pyproject.toml  requirements-lock.txt  requirements.txt
config/: checkpoint_registry.yaml  env.yaml  gain_space.yaml  guidance.yaml  method_innovation_comparison.yaml  method_innovation_comparison_hard.yaml  method_innovation_jsbsim.yaml  method_innovation_track1.yaml  method_innovation_track2.yaml  method_innovation_tuning_complexity.yaml  method_innovation_tuning_eta.yaml  ppo.yaml  reward.yaml  trajectory_prediction.yaml
docs/: README.md  baseline_maintenance.md  benchmark_plan.md  bilevel_final_roadmap.md  classical_prediction_vpp_integration.md  experiment_protocol.md  expert_vpp_policy.md  legacy_mapping.md  method_innovation_track1.md  method_innovation_track2.md  method_innovation_validation_report.md  method_notes.md  no_prediction_vpp_baseline.md  no_prediction_vpp_experiment.md  no_prediction_vpp_jsbsim_bridge.md  no_prediction_vpp_ppo_training.md  paper_alignment_v1.3.md  preflight_checklist.md  reproducibility_checklist.md  reproduction.md  reward_audit.md  stage10_3_crossing_failure_analysis.md  stage6b_prediction_comparison_experiment.md  stage6b_simple_prediction_benchmark.md  stage6g2_failure_root_cause_plan.md  stage6g3_oracle_terminal_feasibility_gate.md  stage6g4_oracle_smoke_and_telemetry.md  stage6g4r_xfail_registry.md  stage6g5_direct_track_probe_plan.md  stage6g5_geometry_smoke_contract.md  stage6g5_wide_geometry_and_true_oracle_plan.md  stage6g_guidance_limitation_probe.md  stage6h0_lite_mode_switch_threshold_optimization_plan.md  status.md  trajectory_prediction_design.md
legacy_notes/: files_to_migrate.md  migration_log.md
memory/: 2026-06-05.md  2026-06-07-0022.md  2026-06-07-0050.md  2026-06-07-0130.md  2026-06-07-0840.md  2026-06-07-0900.md  2026-06-07-0930.md  2026-06-07-1045.md  2026-06-07-1105.md  2026-06-07-1122-stage9b0.md  2026-06-07-1136-stage9b1.md  2026-06-07-stage10_1.md  2026-06-07-stage10_2.md  2026-06-12-baseline-v1.0.md  2026-06-13_quasi_realistic_backend_plan.md
paper_materials/: README.md  paper.tex
paper_materials_smoke/: compile_manifest.json  findings.md
scripts/: DISTRIBUTED_EXECUTION_README.md  aggregate_10seed_results.py  aggregate_crossing_generalization.py  aggregate_domain_rand.py  aggregate_method_innovation_comparison.py  aggregate_pbs_ablation.py  aggregate_predictor_stratification.py  (+124 more)
(+312 files in other folders)
